--- a/Esame Pierluigi Ghiani/MainPage.xaml
+++ b/Esame Pierluigi Ghiani/MainPage.xaml
@@ -13,7 +13,24 @@
                 ItemsSource="{Binding Items}">
                 
                 <CollectionView.ItemTemplate>
-                
+                <DataTemplate>
+                    <Label
+            Text="Binding Title"
+             FontSize="20"
+             Padding="10"/>
+                </DataTemplate>
+                    <DataTemplate>
+                        <Label
+              Text="{Binding Price}"
+              FontSize="14"
+              Padding="10"/>
+                    </DataTemplate>
+                    <DataTemplate>
+                        <Image
+                        Source="{Binding Image}"
+                        HeightRequest="200"
+                        WidthRequest="200"/>
+                    </DataTemplate>
             </CollectionView.ItemTemplate>
             </CollectionView>
 
